@@ -75,6 +75,16 @@ class TestImageIndexView(TestCase, WagtailTestUtils):
             response = self.get({'ordering': ordering})
             self.assertEqual(response.status_code, 200)
 
+    def test_collection_order(self):
+        root_collection = Collection.get_first_root_node()
+        root_collection.add_child(name="Evil plans")
+        root_collection.add_child(name="Good plans")
+
+        response = self.get()
+        self.assertEqual(
+            [collection.name for collection in response.context['collections']],
+            ['Root', 'Evil plans', 'Good plans'])
+
 
 class TestImageAddView(TestCase, WagtailTestUtils):
     def setUp(self):
